fix: grid element sizing & alignment

--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,19 @@ section {
     text-align: center;
     background-color: #CCD5C3;
     border-radius: 100%;
+    width: 50%;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    font-size: 1.25em;
+    color: #565656;
+}
+
+
+.centeringItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
